# anyagent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
agent-packs/code-reviewer/: agent.yaml
agent-packs/code-reviewer/eval/: has_comments.yaml
agent-packs/code-reviewer/prompts/: review.md
backend/: go.mod  go.sum
backend/cmd/egress-proxy/: main.go
backend/cmd/server/: main.go
backend/internal/db/: agents.go  db.go  entitlements.go  memories.go  projects.go  traces.go  users.go
backend/internal/handler/: auth.go  entitlements.go  license.go  memory.go  projects.go  registry.go  run.go  trace.go
backend/internal/middleware/: middleware.go
backend/migrations/: 001_initial.sql  002_marketplace.sql
cli/: Cargo.toml
cli/src/: main.rs
cli/src/api/: auth.rs  client.rs  memory.rs  mod.rs  registry.rs  trace.rs
cli/src/commands/: config.rs  eval.rs  init.rs  install.rs  list.rs  login.rs  logout.rs  mcp.rs  memory.rs  mod.rs  publish.rs  run.rs  search.rs  status.rs  trace.rs  uninstall.rs  update.rs  whoami.rs
cli/src/config/: mod.rs  project.rs
cli/src/mcp/: server.rs  tools.rs
cli/src/runner/: analyzer.rs  executor.rs  fs.rs  git.rs  mod.rs
cli/src/utils/: mod.rs
infra/: Dockerfile.backend  Dockerfile.egress-proxy  docker-compose.yml
infra/agent-runner/: Dockerfile  main.go
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: auth.ts  index.ts  server.ts
scripts/: install.sh  release.sh  test-e2e.sh
web/: package-lock.json
(+19 files in other folders)
