[package]
name = "agentx"
version = "0.1.0"
edition = "2021"
description = "AnyAgent CLI - Agent enhancement platform for developers"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
anyhow = "1"
thiserror = "2"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
open = "5"
url = "2"
flate2 = "1"
tar = "0.4"
tempfile = "3"
urlencoding = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
